--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=bank
+server.port=8080
+
+# H2 in-memory database settings
+spring.datasource.url=jdbc:h2:mem:bankdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+
+# Show SQL statements in the logs
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
